--- a/object_detector/CMakeLists.txt
+++ b/object_detector/CMakeLists.txt
@@ -153,7 +153,7 @@ add_executable(${PROJECT_NAME}_node
   src/${PROJECT_NAME}_node.cpp
   src/${PROJECT_NAME}.cpp
   src/motion_compensation.cpp
-  src/clustering.cpp
+  src/object_segmentation.cpp
 )
 
 ## Rename C++ executable without prefix
